EASYOPAC-1482 - Added fix for text spacing, needs for wcag.

--- a/themes/ddbasic/sass/configuration/_typography.scss
+++ b/themes/ddbasic/sass/configuration/_typography.scss
@@ -29,7 +29,9 @@ $weight-normal: 400;
   @if $name == 'base' {
     font-family: $font-family;
     font-size: 16px;
-    line-height: 20px;
+    line-height: 1.5;
+    word-spacing: 0.16pt;
+    letter-spacing: 0.12pt;
     font-weight: $weight-normal;
   }
 
